tests/fixtures/invalid/list_constructor_multiple_args.py
# list() should not accept multiple arguments
# Expected error: "list() takes no arguments"

lst: list[int] = list(1, 2, 3)
